2014-10-05  David B. Lamkins  <david@lamkins.net>

	* edit.c (message_dialog, edit_save_object_cb, edit_file): Report
	file import error.

	* aplwrap.c (key_press_event): Don't need to explicitly handle
	accelerator keys.

	* menu.c (ps_dialog_cb, set_pstat_value, ps_button_cb)
	(ps_toggle_cb): Consolidate most pstat code into one file.

	* pstat.h (): Consolidate most pstat code into one file.

	* pstat.c (ps_dialog_cb, set_pstat_value, ps_button_cb)
	(ps_toggle_cb): Consolidate most pstat code into one file.

	* edit.c (edit_close, edit_file): Minor code cleanup.

	* menu.h (): Factor menu-item creation code.

	* menu.c (add_menu_item, build_menubar): Factor menu-item creation
	code.

	* edit.c (build_edit_menubar): Factor menu-item creation code.

2014-10-04  David B. Lamkins  <david@lamkins.net>

	* menu.c (show_manuals): Inset notebook view. Start with slightly
	larger notebook window.

	* menu.c (show_manuals): Allow notebook tabs to be reordered.

	* menu.c (show_manuals, build_menubar): Add tabbed notebook to
	display APLwrap manuals.

	* aplwrap.c (key_press_event): Add keyboard accelerators for
	commonly used menu items.

	* menu.c (build_menubar): Add keyboard accelerators for commonly
	used menu items.

	* edit.c (build_edit_menubar): Add keyboard accelerators for
	commonly used menu items.

	* menu.c (remember_shortcut, add_shortcut, import_file): Remember
	recently used folders as sidebar shortcuts in Open File dialog.

	* edit.h (): Keep function editor window open upon syntax error.

	* edit.c (edit_close, edit_save_object, edit_delete_real): Keep
	function editor window open upon syntax error.

	* menu.c (import_file): Add filters to the Open File dialog.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* menu.h (): Implemented file Open, Save and Save As.

	* edit.h (): Implemented file Open, Save and Save As.

	* menu.c (import_file, set_filename, save_log, save_log_as)
	(build_menubar): Implemented file Open, Save and Save As.
